--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     Ефективні рішення для вашого бізнесу
 </h1>
 
-<button></button>
+<button type="button">Замовити послугу</button>
+
+</section>
+
+<section>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </section>
 
 </main>
