Друга секція яка описує деякі терміни

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
 <section>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><span>УВАГА ДО ДЕТАЛЕЙ</span> <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
+        <li><span>ПУНКТУАЛЬНІСТЬ</span> <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
+        <li><span>ПЛАНУВАННЯ</span> <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
+        <li><span>СУЧАСНІ ТЕХНОЛОГІЇ</span> <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
 </section>
 
