Третя секція розповідає чим вони займаються

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buisnes</title>
 </head>
+<!-- Заголовок -->
 <header>
     <img src="./WebStudio.png" alt="Logo">  
    <nav>
@@ -19,8 +20,9 @@
 
     <a href="tel:+380961111111">+38 096 111 11 11</a>
 </header>
+<!-- Основний контент -->
 <main>
-
+<!-- Перша коробка з кнопкою -->
 <section>
 <h1>
     Ефективні рішення для вашого бізнесу
@@ -29,7 +31,7 @@
 <button type="button">Замовити послугу</button>
 
 </section>
-
+<!-- Описи чотирьох слів -->
 <section>
     <ul>
         <li><span>УВАГА ДО ДЕТАЛЕЙ</span> <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
@@ -38,7 +40,19 @@
         <li><span>СУЧАСНІ ТЕХНОЛОГІЇ</span> <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
 </section>
-
+<!-- РОзповідь про те що вони роблять -->
+<section>
+<h1>Чим ми займаємося</h1>
+<ul>
+    <li><img src="./img.png" alt="Photo"></li>
+    <li><img src="./img (1).png" alt="Photo"></li>
+    <li><img src="./img (2).png" alt="Photo"></li>
+</ul>
+</section>
+<!--  -->
+<section>
+    
+</section>
 </main>
 
 <footer>
@@ -49,3 +63,6 @@
     
 </body>
 </html>
+
+
+
