четверта секція це їхня команда

--- a/index.html
+++ b/index.html
@@ -49,9 +49,43 @@
     <li><img src="./img (2).png" alt="Photo"></li>
 </ul>
 </section>
-<!--  -->
+<!-- Їхня команда -->
 <section>
-    
+<h1>Наша команда</h1>
+<ul>
+    <li> <img src="./comand.png" 
+        alt="Profile-photo"
+        width="270"
+        height="260"
+        > 
+        <h3>Ігор Дем'яненко</h3> 
+        <p>Product Designer</p> 
+    </li>
+    <li> <img src="./comand(1).jpg" 
+        alt="Profile-photo"
+        width="270"
+        height="260"
+        > 
+        <h3>Ольга Рєпіна</h3> 
+        <p>Frontend Developer</p> 
+    </li>
+
+    <li> <img src="./comand(2).jpg" 
+        alt="Profile-photo"
+        width="270"
+        height="260"
+        > 
+        <h3>Микола Тарасов</h3> 
+        <p>Marketing</p> </li>
+
+    <li> <img src="./comand(3).jpg" 
+        alt="Profile-photo"
+        width="270"
+        height="260"
+        > 
+        <h3>Михайло Єрмаков</h3> 
+        <p>UI Designer</p> </li>
+</ul>
 </section>
 </main>
 
