--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
 </main>
 
 <footer>
+<img src="./WebStudio.png" alt="Logo">
 
+<ul>
+    <li> <a href="https://goo.gl/maps/54EnvFbhhNfq9ATFA"> м. Київ, пр-т Лесі Українки, 26</a></li>
+    <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+</ul>
 </footer>
          
 <body>
