--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 </section>
 <!-- Описи чотирьох слів -->
 <section>
-    <h2>.</h2>
+    <h2>Переваги</h2>
     <ul>
         
         <li><h3>ПЛАНУВАННЯ</h3> <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></li>
-        <li><h3>ПУНКТУАЛЬНІСТЬ</h3><span>ПУНКТУАЛЬНІСТЬ</span> <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
-        <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3><span>ПЛАНУВАННЯ</span> <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
-        <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3><span>СУЧАСНІ ТЕХНОЛОГІЇ</span> <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
+        <li><h3>ПУНКТУАЛЬНІСТЬ</h3> <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></li>
+        <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3> <p>Так само консультація з широким активом значною мірою зумовлює.</p></li>
+        <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3><p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></li>
     </ul>
 </section>
 <!-- РОзповідь про те що вони роблять -->
 <section>
 <h2>Чим ми займаємося</h2>
 <ul>
-    <li><img src="./img/img-one.jpg" alt="Фото" width="370"> </li>
-    <li><img src="./img/img-two.jpg" alt="Фото" width="370"></li>
-    <li><img src="./img/img-thre.jpg" alt="Фото" width="370"></li>
+    <li><img src="./img/img-one.jpg" alt="Робота з пк" width="370"> </li>
+    <li><img src="./img/img-two.jpg" alt="робота приладів" width="370"></li>
+    <li><img src="./img/img-thre.jpg" alt="фото роботи дизайнера" width="370"></li>
 </ul>
 </section>
 <!-- Їхня команда -->
@@ -69,7 +69,7 @@
         <p>Product Designer</p> 
     </li>
     <li> <img src="./img/comand-one.jpg" 
-        alt="Ольга Рєпіна
+        alt="Ольга Рєпіна"
         width="270"
         height="260"
         > 
@@ -100,7 +100,7 @@
     <a href="./index.html">WebStudio</a>
 
 <ul>
-    <li> <a href="посилання google map" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a> </li>
+    <li> <a href="https://goo.gl/maps/XLrFpxpfjgVsRPzN8" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a> </li>
     <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
     <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 </ul>
